595 replace boundingboxdto with adapter (#596)
* added BoundingBoxDeserializer

* replaced use of toBoundingBox()

* cleared out use of BoundingBoxDTo.from()